configmap-pod02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-volume-cm
spec:
  containers:
    - name: volume-cm-test
      image: alpine
      command: ["/bin/sh", "-c", "sleep 3600"]
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config
  volumes:
    - name: config-volume
      configMap:
        name: test-dir-config
        items:
          - key: db.yaml
            path: db.yaml
  restartPolicy: Never
