pod02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox

spec:
  containers:
  - name: busybox
    image: busybox
    imagePullPolicy: IfNotPresent
